--- a/src/style/index.less
+++ b/src/style/index.less
@@ -2,4 +2,10 @@
 {
     font-family: ChenYuluoyan-Thin;
     src: url('../assets/ChenYuluoyan-Thin-Monospaced.ttf');
+
+    font-family: Iansui094;
+    src: url('../assets/Iansui094-Regular.ttf');
+
+    font-family: NaikaiFont;
+    src: url('../assets/NaikaiFont-Regular.ttf');
 }
